feat: initial commit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,14 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": "src",
+    "paths": {
+      "@layout-components": ["layout-components"],
+      "@page-components": ["page-components"],
+      "@global-components": ["global-components"],
+      "@atoms": ["atoms"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
