--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^4.1.17",
+    "jotai": "^1.4.1",
+    "nanoid": "^3.1.30",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.5",
+    "react-icons": "^4.3.1",
+    "styled-components": "5.3.3"
   },
   "devDependencies": {
+    "@types/hoist-non-react-statics": "^3.3.1",
     "@types/react": "17.0.30",
+    "@types/react-dom": "^17.0.10",
+    "@types/styled-components": "^5.1.15",
+    "babel-plugin-styled-components": "^1.13.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.4"
