--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
   },
   "dependencies": {
     "framer-motion": "^4.1.17",
-    "jotai": "^1.4.1",
+    "jotai": "^1.4.2",
     "nanoid": "^3.1.30",
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.5",
     "react-icons": "^4.3.1",
-    "styled-components": "5.3.3"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/hoist-non-react-statics": "^3.3.1",
-    "@types/react": "17.0.30",
+    "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/styled-components": "^5.1.15",
     "babel-plugin-styled-components": "^1.13.3",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.4.4"
+    "eslint": "^8.1.0",
+    "eslint-config-next": "^12.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "typescript": "^4.4.4"
   }
 }
