--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/styled-components": "^5.1.15",
-    "babel-plugin-styled-components": "^1.13.3",
-    "eslint": "^8.1.0",
+    "eslint": "<8.0.0",
     "eslint-config-next": "^12.0.0",
     "typescript": "^4.4.4"
   }
