--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.5",
     "react-icons": "^4.3.1",
+    "react-toastify": "^8.0.3",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
