--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^5.0.0",
+    "framer-motion": "<5.0.0",
     "jotai": "^1.4.2",
     "nanoid": "^3.1.30",
     "next": "^12.0.2",
