--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "<5.0.0",
-    "jotai": "^1.4.2",
+    "framer-motion": "^5.3.0",
+    "jotai": "^1.4.3",
     "nanoid": "^3.1.30",
-    "next": "^12.0.2",
+    "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.18.0",
+    "react-hook-form": "^7.19.5",
     "react-icons": "^4.3.1",
-    "react-toastify": "^8.0.3",
+    "react-toastify": "^8.1.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/hoist-non-react-statics": "^3.3.1",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@types/react": "^17.0.35",
+    "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.15",
     "eslint": "<8.0.0",
-    "eslint-config-next": "^12.0.2",
+    "eslint-config-next": "^12.0.4",
     "typescript": "^4.4.4"
   }
 }
