--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^3.6.0",
     "framer-motion": "^5.3.0",
     "jotai": "^1.4.3",
     "nanoid": "^3.1.30",
     "next": "^12.0.4",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.5",
     "react-icons": "^4.3.1",
